--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "coverage": "npm run unit -- --cov --coverage-report=html",
+    "coverage": "nyc --reporter=html --reporter=text npm run unit",
     "lint": "npx standard --verbose | npx snazzy",
     "test": "npm run lint && npm run unit",
     "test:ci": "npm run lint && npm run unit -- --cov --coverage-report=lcovonly",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.1.0",
+    "nyc": "^15.1.0",
     "snazzy": "^8.0.0",
     "standard": "^14.3.4",
     "tap": "^14.10.8",
